update user avatar url
